--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
         <div class="icon"><i class="bx bx-devices"></i></div>
         <h4 class="title"><a href="">Mobile development</a></h4>
-        <p class="description">I am involved in the development of  cutting-edge mobile applications.</p>
+        <p class="description">I am involved in the development of cutting-edge mobile applications.</p>
       </div>
       <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
         <div class="icon"><i class="bx bx-data"></i></div>
@@ -157,12 +157,12 @@
       <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
         <div class="icon"><i class="bx bx-calendar"></i></div>
         <h4 class="title"><a href="">Project management</a></h4>
-        <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+        <p class="description">I process a level of familiratity with Agile project management, like SCRUM. </p>
       </div>
       <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
         <div class="icon"><i class="bx bx-stats"></i></div>
         <h4 class="title"><a href="">Digital Transformation Strategies</a></h4>
-        <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+        <p class="description"> My master's degree had equipped me with a strong understanding of digital transformation techniques.</p>
       </div>
     </div>
 
