--- a/index.html
+++ b/index.html
@@ -44,11 +44,15 @@
 
       <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Youssef Baaziz</a></h1>
+        <h1 class="text-light"><a>Youssef Baaziz</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/youssefbaazizesen" target="_blank" class="facebook"><i class='bx bxl-github'></i>
           <a href="https://www.linkedin.com/in/youssef-baaziiz/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
+        <meta name="description" content="Youssef Baaziz - Web Developer and IT Enthusiast">
+        <meta name="keywords" content="Youssef Baaziz, Web Developer, IT Enthusiast, GitHub, LinkedIn">
+        <meta name="author" content="Youssef Baaziz">
+        <meta name="robots" content="index, follow">
       </div>
 
       <nav id="navbar" class="nav-menu navbar">
@@ -167,6 +171,12 @@
     </div>
 
   </div>
+  <meta name="description" content="Discover my skills in back-end development, mobile development, ERP systems, Object-Oriented Programming, project management, and digital transformation strategies.">
+  <meta name="keywords" content="skills, back-end development, mobile development, ERP systems, Object-Oriented Programming, project management, digital transformation strategies">
+  <meta name="robots" content="index, follow">
+  <meta name="description" content="Découvrez mes compétences en développement back-end, développement mobile, systèmes ERP, programmation orientée objet, gestion de projet et stratégies de transformation numérique.">
+  <meta name="keywords" content="compétences, développement back-end, développement mobile, systèmes ERP, programmation orientée objet, gestion de projet, stratégies de transformation numérique">
+  <meta name="robots" content="index, follow">
 </section><!-- End Skills Section -->
 
  
@@ -289,6 +299,12 @@ This system helps TunisAir managing an important sheet called "Journey Log" by t
         </div>
 
       </div>
+      <meta name="description" content="Explore my educational background, professional experience, and extracurricular activities, including my master's degree in Management Control and Business Intelligence, bachelor's degree in Business Computing and E-Business, and various projects and roles in AIESEC and ESEN Android Club.">
+  <meta name="keywords" content="resume, education, master's degree, bachelor's degree, professional experience, extracurricular activities, AIESEC, ESEN Android Club">
+  <meta name="robots" content="index, follow">
+  <meta name="description" content="Explorez mon parcours éducatif, mon expérience professionnelle et mes activités parascolaires, notamment mon master en contrôle de gestion et Business Intelligence, ma licence en Informatique de gestion et E-commerce, ainsi que mes différents projets et rôles à AIESEC et au club Android d'ESEN.">
+  <meta name="keywords" content="CV, éducation, master, licence, expérience professionnelle, activités parascolaires, AIESEC, club Android d'ESEN">
+  <meta name="robots" content="index, follow">
     </section><!-- End Resume Section -->
 
 
